# CS-61C-Labs

./: .gitignore  UpperLen.s
lab00/: answers.txt
lab01/: -g  CMakeLists.txt  answers.txt  eccentric.c  gdb.txt  ll_cycle.c  ll_cycle.h
lab02/: CMakeLists.txt  bit_ops.c  lfsr.c  make.txt  vector.c
lab03/: cc_test.s  ex1.s  ex2.s  factorial.s  list_map.s
lab04/: discrete_fn.s  megalistmanips.s
lab05/testing/circ_files/: ex1.circ  ex2.circ  ex3.circ  ex4.circ  ex5.circ
lab06/: ex1.circ
lab07/: .test_transpose.c.swp  exercise1.txt  exercise2.txt  exercise3.txt  matrixMultiply.c  transpose.c
lab08/: answers.txt
lab09/: CMakeLists.txt  exercise1.txt  exercises.txt  simd.c
lab10/: CMakeLists.txt  omp_apps.c  server_utils.c
